[gd_scene load_steps=15 format=3 uid="uid://d0iyidwt2kfsw"]

[ext_resource type="Script" uid="uid://drij3gdl56y45" path="res://Stages/Card Game/CardGame.gd" id="1_nhykh"]
[ext_resource type="PackedScene" uid="uid://b3qctmxtsfinp" path="res://Common/Background/Background.tscn" id="2_nhykh"]
[ext_resource type="Material" uid="uid://b5uyqmqo40ydu" path="res://Stages/BossBG.tres" id="3_co46d"]
[ext_resource type="Script" uid="uid://fm65gmeoowak" path="res://Common/Parallax/Parallax.gd" id="3_oj71w"]
[ext_resource type="PackedScene" uid="uid://pkka7c8d3yxx" path="res://Entities/Player/Player.tscn" id="4_8kvg2"]
[ext_resource type="PackedScene" uid="uid://0dnbilvg84cq" path="res://Stages/Card Game/Card Hit Zone/CardHitZone.tscn" id="5_ry6d3"]
[ext_resource type="Script" uid="uid://j4o7hdy1nvrq" path="res://Stages/Card Game/Game Camera/GameCamera.gd" id="6_lyoxa"]
[ext_resource type="Texture2D" uid="uid://k6jhtgckk285" path="res://Stages/Card Game/Buttons/PauseButton.png" id="7_nbf6q"]
[ext_resource type="FontFile" uid="uid://b2lwqd3u504hn" path="res://Assets/Fonts/BigSpace-rPKx.ttf" id="8_ql2x8"]
[ext_resource type="Texture2D" uid="uid://bselagskc8btp" path="res://Common/Game Button/GameButton.png" id="9_srvvf"]
[ext_resource type="Script" uid="uid://ccu4a4ttx02ue" path="res://Common/Game Button/GameButton.gd" id="10_bwyij"]
[ext_resource type="Material" uid="uid://02532mgqwkc" path="res://Common/VHS/VHSShader.tres" id="11_y4d06"]

[sub_resource type="LabelSettings" id="LabelSettings_e1x1l"]
font = ExtResource("8_ql2x8")
font_size = 75
font_color = Color(0.733005, 0.733005, 0.733005, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bvi5y"]
font = ExtResource("8_ql2x8")
font_size = 450
font_color = Color(0, 0, 0, 1)

[node name="CardGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_nhykh")

[node name="Background" parent="." instance=ExtResource("2_nhykh")]
material = ExtResource("3_co46d")
layout_mode = 1

[node name="EnemyParallax" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_oj71w")
max_parallax_offset = Vector2(1.5, 1.5)
smoothing = 4.0

[node name="PlayerParallax" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_oj71w")

[node name="Player" parent="PlayerParallax" instance=ExtResource("4_8kvg2")]
layout_mode = 1

[node name="CardHitZone" parent="." instance=ExtResource("5_ry6d3")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1

[node name="GameCamera" type="Camera2D" parent="." groups=["Camera"]]
anchor_mode = 0
script = ExtResource("6_lyoxa")

[node name="PauseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 65.0
offset_bottom = 55.0
texture_normal = ExtResource("7_nbf6q")
ignore_texture_size = true
stretch_mode = 5

[node name="PausedLayer" type="ColorRect" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = 41.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="VBoxContainer" type="VBoxContainer" parent="PausedLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="PausedLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10000
text = "Paused"
label_settings = SubResource("LabelSettings_e1x1l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="PausedLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 62.5)
layout_mode = 2
texture_normal = ExtResource("9_srvvf")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("10_bwyij")

[node name="Label" type="Label" parent="PausedLayer/VBoxContainer/ContinueButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_right = 2960.0
offset_bottom = 1017.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 10000
text = "Continue"
label_settings = SubResource("LabelSettings_bvi5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="PausedLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 62.5)
layout_mode = 2
texture_normal = ExtResource("9_srvvf")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("10_bwyij")

[node name="Label" type="Label" parent="PausedLayer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_right = 2960.0
offset_bottom = 1017.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 10000
text = "Quit"
label_settings = SubResource("LabelSettings_bvi5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PostProcessing" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="PostProcessing"]
material = ExtResource("11_y4d06")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PausedLayer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PausedLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
